<resources>
    <string name="app_name">ProjetoCurso</string>
    <string name="txt_hint_edit_nome_do_curso_desejado">Nome do curso desejado:</string>
    <string name="txt_hint_edit_sobrenome">Sobrenome:</string>
    <string name="txt_hint_edit_telefone_de_contato">Telefone de contato:</string>
    <string name="txt_button_finalizar">Finalizar</string>
    <string name="txt_button_salvar">Salvar</string>
    <string name="txt_button_limpar">Limpar</string>
    <string name="txt_app_lista_curso">App Lista Curso</string>
    <string name="txt_hint_edit_primeiro_nome">Primeiro nome:</string>
</resources>